--- a/Proyecto/PEC.html
+++ b/Proyecto/PEC.html
@@ -3,18 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio Cultura Digital 2</title>
+    <title>PEC</title>
 </head>
 <body>
-    <h1>Portafolio Cultura Digital 2</h1>
+    <h1>PEC</h1>
     <h3 style="color: aqua;">Bruno Corrales Borrego</h3>
     <hr>
     <img src="mifoto.jpg" alt="">
-    <h3>actividades</h3>
+    <h3></h3>
     <ol>
         <li>
-            <a href="file:///D:/Pec/formulario.html">Practica #1 Actividad Power Point</a>
+            <a href="Neonets09.github.io/Proyecto/Descripcion">-Descripcion-</a>
         </li>
     </ol>
+
+    <ol>
+        <li>
+            <a href="Neonets09.github.io/Proyecto/Proceso">-Proceso-</a>
+        </li>
+    </ol>
+
+    <ol>
+        <li>
+            <a href="Neonets09.github.io/Proyecto/Diseño">-Proceso-</a>
+        </li>
+    </ol>
+
+
+
+    
 </body>
 </html>
