--- a/Proyecto/PEC.html
+++ b/Proyecto/PEC.html
@@ -13,19 +13,19 @@
     <h3></h3>
     <ol>
         <li>
-            <a href="Neonets111.github.io/Proyecto/Descripcion.html">-Descripcion-</a>
+            <a href="/Descripcion.html">-Descripcion-</a>
         </li>
     </ol>
 
     <ol>
         <li>
-            <a href="Neonets111.github.io/Proyecto/Proceso.html">-Proceso-</a>
+            <a href="/Proceso.html">-Proceso-</a>
         </li>
     </ol>
 
     <ol>
         <li>
-            <a href="Neonets111.github.io/Proyecto/Diseño.html">-Proceso-</a>
+            <a href="/Diseño.html">-Proceso-</a>
         </li>
     </ol>
 
