--- a/Proyecto/PEC.html
+++ b/Proyecto/PEC.html
@@ -7,10 +7,9 @@
 </head>
 <body>
     <h1>PEC</h1>
-    <h3 style="color: aqua;">Bruno Corrales Borrego</h3>
-    <hr>
-    <img src="mifoto.jpg" alt="">
-    <h3></h3>
+
+    <H2>Cultura Digital Proyecto Pagina Web.</H2>>
+    
     <ol>
         <li>
             <a href="/Proyecto/Descripcion.html">-Descripcion-</a>
@@ -25,9 +24,21 @@
 
     <ol>
         <li>
-            <a href="/Proyecto/Diseño.html">-Proceso-</a>
+            <a href="/Proyecto/Diseño.html">-Diseño-</a>
         </li>
     </ol>
+
+    <h3>Miembros de el Equipo: </h3>
+
+    <h3 style="color: aqua;">-Bruno Corrales Borrego</h3>
+    <h3 style="color: rgb(255, 0, 0);">-Victor Ernesto Meza Mejia</h3>
+    <h3 style="color: rgb(0, 255, 42);">-Diego Alfonso Duarte Lopez</h3>
+    <h3 style="color: rgb(187, 255, 0);">-Hector Manuel Aguirre Lopez</h3>
+    <h3 style="color: rgb(140, 0, 255);">-Maximo Aguilar Rodriguez</h3>
+
+    <hr>
+    <img src="mifoto.jpg" alt="">
+    <h3></h3>
 
 
 
