--- a/Proyecto/Descripcion.html
+++ b/Proyecto/Descripcion.html
@@ -20,6 +20,8 @@
         </p>
     </Header>
 
+
+
     <h1 style="color:cornflowerblue">En Cetis107    La Practica de PEC que realizamos nosotros es la Recoleccion de Materiales PET</h1>
 
     <h1>Caracteristicas Principales:</h1>
@@ -44,6 +46,10 @@
     
     <p style="background-color: bisque;">Promueve el aprendizaje a través de la experiencia, la reflexión y la acción. </p>
 
+    <img src="imagenproyecto1.jpg" alt="">
+    <h3></h3>
+
+
     <h1>Ejemplos de Proyectos Escolares Comunitarios:</h1>
 
     <h2 style="color: dodgerblue;">Programas de apoyo escolar:</h2>
@@ -58,7 +64,6 @@
 
     <p style="color:azure; background-color: rgb(55, 0, 100);">Realizar actividades para promover la conciencia sobre temas como el reciclaje, la alimentación saludable, la prevención de la violencia, entre otros.</p>
 
-    
 
 
 
