--- a/Proyecto/Descripcion.html
+++ b/Proyecto/Descripcion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color:beige">
     
     <h1 style="color:lightcoral">Descripcion Del "PEC" (Proyecto Escolar Comunitario)</h1>
 
@@ -63,6 +63,12 @@
     <h2>Campañas de sensibilización:</h2>
 
     <p style="color:azure; background-color: rgb(55, 0, 100);">Realizar actividades para promover la conciencia sobre temas como el reciclaje, la alimentación saludable, la prevención de la violencia, entre otros.</p>
+
+    <ol>
+        <li>
+            <a href="/Proyecto/PEC.html">-Pagina Principal-</a>
+        </li>
+    </ol>
 
 
 
