--- a/Proyecto/PEC.html
+++ b/Proyecto/PEC.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PEC</title>
 </head>
-<body>
+<body style="background-color: lightgoldenrodyellow;">
     <h1>PEC</h1>
 
     <H2>Cultura Digital Proyecto Pagina Web.</H2>>
