--- a/Proyecto/Diseño.html
+++ b/Proyecto/Diseño.html
@@ -9,16 +9,16 @@
 <body style="background-color:rgba(255, 226, 191, 0.356);">
     <h1 style="color:steelblue ;">Diseño</h1>
 
-    <img src="imagenproyecto3.jpg" alt="">
+    <img src="imagenproyecto3.jpg" alt="" width="300" height="400">
     <h3 style="color: cornflowerblue;">Bruno Y Victor sacando la bolsa de basura de el bote.</h3>
 
-     <img src="imagenproyecto4.jpg" alt="">
+     <img src="imagenproyecto4.jpg" alt="" width="300" height="400">
     <h3 style="color: darkcyan;">Diego Cargando la bolsa de basura para llevarla a su zona.</h3>
 
-     <img src="imagenproyecto5.jpg" alt="">
+     <img src="imagenproyecto5.jpg" alt="" width="400" height="400">
     <h3 style="color:coral;">Maximo despues de haber sacado la bolsa de el bote de basura.</h3>
 
-     <img src="imagenproyecto6.jpg" alt="">
+     <img src="imagenproyecto6.jpg" alt="" width="300" height="400">
     <h3 style="color: sandybrown;">Diego y Victor dejando la bolsa en su area correspondida(atras de la cancha)</h3>
 
     <ol>
